fixed spacing problem in menu section

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -45,5 +45,4 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 100px 100px 0px 100px;
-  gap: 100px;
 }
